# serializer version: 1
# name: test_the_fastcgi_site_matches_the_snapshot[plain][plain]
  '''
  # Nginx PHP-FPM site configuration for example.com
  # Generated by WASM
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method). ^~ stops
      # nginx from even considering the hidden-files regex below for this
      # path: a plain prefix location loses to any matching regex location,
      # checked in file order, and ".well-known" itself starts with a dot.
      location ^~ /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
  
      # Document root. On releases this goes through the ``current`` link;
      # PHP is handed $realpath_root below, so a switch of ``current`` reaches
      # the next request without nginx being reloaded.
      root /var/www/apps/example-com/current;
      index index.php index.html;
  
      # Uploads (WordPress media, CMS attachments) are held in PHP too.
      client_max_body_size 64m;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Front controller: a path that is not a file goes to index.php.
      location / {
          try_files $uri $uri/ /index.php?$args;
      }
  
      location = /wp-config.php {
          deny all;
          access_log off;
          log_not_found off;
      }
  
      location = /readme.html {
          deny all;
          access_log off;
          log_not_found off;
      }
  
      # Regular expression locations are tried in the order they are written,
      # and the first match wins: every refusal comes before the PHP handler.
  
      # Other well-known resources (security.txt, apple-app-site-association,
      # a renewal's ACME check, ...) must stay reachable too: ^~ keeps this
      # whole prefix out of the hidden-files regex below, the same way the
      # acme-challenge location above does.
      location ^~ /.well-known/ {
      }
  
      # Hidden files and directories (.env, .git, .htaccess), except
      # /.well-known/ above.
      location ~ /\. {
          deny all;
          access_log off;
          log_not_found off;
      }
  
      # Dependency manifests and vendored code are never served, nor run.
      location ~* ^/(?:composer\.(?:json|lock)|vendor/) {
          deny all;
      }
  
      # A PHP file in an upload directory is somebody's payload, never code
      # the application shipped: it is refused before it can reach PHP.
      location ~* /(?:uploads|files)/.*\.php$ {
          deny all;
      }
  
      location ~ \.php$ {
          # Only files that exist: without this, /image.jpg/x.php would ask
          # PHP to run an uploaded image.
          try_files $uri =404;
          fastcgi_pass unix:/run/php/wasm-example-com.sock;
          include fastcgi_params;
          fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
          fastcgi_param DOCUMENT_ROOT $realpath_root;
          fastcgi_read_timeout 300;
      }
  
      # Cache static assets
      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|avif|woff|woff2|ttf|eot)$ {
          expires 30d;
          add_header Cache-Control "public";
          access_log off;
          try_files $uri =404;
      }
  }
  '''
# ---
# name: test_the_fastcgi_site_matches_the_snapshot[ssl-redirect][ssl-redirect]
  '''
  # Nginx PHP-FPM site configuration for example.com
  # Generated by WASM
  
  # www.example.com redirects permanently to example.com
  server {
      listen 80;
      listen [::]:80;
      server_name www.example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method)
      location /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      location / {
          return 301 https://example.com$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name www.example.com;
  
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
  
      return 301 https://example.com$request_uri;
  }
  
  server {
      listen 80;
      listen [::]:80;
      server_name example.com;
  
      # ACME challenge location for Let's Encrypt (webroot method). ^~ stops
      # nginx from even considering the hidden-files regex below for this
      # path: a plain prefix location loses to any matching regex location,
      # checked in file order, and ".well-known" itself starts with a dot.
      location ^~ /.well-known/acme-challenge/ {
          root /var/www/html;
          allow all;
      }
  
      # Redirect HTTP to HTTPS (except ACME challenges)
      location / {
          return 301 https://$host$request_uri;
      }
  }
  
  server {
      listen 443 ssl http2;
      listen [::]:443 ssl http2;
      server_name example.com;
  
      # SSL Configuration
      ssl_certificate /etc/letsencrypt/live/example.com/fullchain.pem;
      ssl_certificate_key /etc/letsencrypt/live/example.com/privkey.pem;
  
      # SSL Settings
      ssl_protocols TLSv1.2 TLSv1.3;
      ssl_prefer_server_ciphers off;
      ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384;
      ssl_session_timeout 1d;
      ssl_session_cache shared:SSL:50m;
      ssl_stapling on;
      ssl_stapling_verify on;
  
      # Document root. On releases this goes through the ``current`` link;
      # PHP is handed $realpath_root below, so a switch of ``current`` reaches
      # the next request without nginx being reloaded.
      root /var/www/apps/example-com/current;
      index index.php index.html;
  
      # Uploads (WordPress media, CMS attachments) are held in PHP too.
      client_max_body_size 64m;
  
      # Logging
      access_log /var/log/nginx/example.com.access.log;
      error_log /var/log/nginx/example.com.error.log;
  
      # Security headers
      add_header X-Frame-Options "SAMEORIGIN" always;
      add_header X-Content-Type-Options "nosniff" always;
      add_header X-XSS-Protection "1; mode=block" always;
      add_header Referrer-Policy "strict-origin-when-cross-origin" always;
  
      # Gzip compression
      gzip on;
      gzip_vary on;
      gzip_proxied any;
      gzip_comp_level 6;
      gzip_types text/plain text/css text/xml application/json application/javascript application/rss+xml application/atom+xml image/svg+xml;
  
      # Front controller: a path that is not a file goes to index.php.
      location / {
          try_files $uri $uri/ /index.php?$args;
      }
  
      location = /wp-config.php {
          deny all;
          access_log off;
          log_not_found off;
      }
  
      location = /readme.html {
          deny all;
          access_log off;
          log_not_found off;
      }
  
      # Regular expression locations are tried in the order they are written,
      # and the first match wins: every refusal comes before the PHP handler.
  
      # Other well-known resources (security.txt, apple-app-site-association,
      # a renewal's ACME check, ...) must stay reachable too: ^~ keeps this
      # whole prefix out of the hidden-files regex below, the same way the
      # acme-challenge location above does.
      location ^~ /.well-known/ {
      }
  
      # Hidden files and directories (.env, .git, .htaccess), except
      # /.well-known/ above.
      location ~ /\. {
          deny all;
          access_log off;
          log_not_found off;
      }
  
      # Dependency manifests and vendored code are never served, nor run.
      location ~* ^/(?:composer\.(?:json|lock)|vendor/) {
          deny all;
      }
  
      # A PHP file in an upload directory is somebody's payload, never code
      # the application shipped: it is refused before it can reach PHP.
      location ~* /(?:uploads|files)/.*\.php$ {
          deny all;
      }
  
      location ~ \.php$ {
          # Only files that exist: without this, /image.jpg/x.php would ask
          # PHP to run an uploaded image.
          try_files $uri =404;
          fastcgi_pass unix:/run/php/wasm-example-com.sock;
          include fastcgi_params;
          fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
          fastcgi_param DOCUMENT_ROOT $realpath_root;
          fastcgi_read_timeout 300;
      }
  
      # Cache static assets
      location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|webp|avif|woff|woff2|ttf|eot)$ {
          expires 30d;
          add_header Cache-Control "public";
          access_log off;
          try_files $uri =404;
      }
  }
  '''
# ---
